--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "dick": "remix vite:dev",
     "format": "prettier --write .",
     "lint": "eslint .",
+    "setup": "npm run build && prisma generate && prisma migrate deploy && prisma db seed",
     "predev": "npm run build:icons --silent",
-    "start": "prisma generate && prisma migrate deploy && NODE_ENV=production node .",
+    "start": "NODE_ENV=production node .",
     "typecheck": "tsc"
   },
   "eslintIgnore": [
