--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dick": "remix vite:dev",
     "format": "prettier --write .",
     "lint": "eslint .",
-    "setup": "npm run build && prisma generate && prisma migrate deploy && prisma db seed",
+    "setup": "npm run build && npx prisma generate && npx prisma migrate deploy && npx prisma db seed",
     "predev": "npm run build:icons --silent",
     "start": "NODE_ENV=production node .",
     "typecheck": "tsc"
